some mistakes update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hustlin' Hardos</title>
     <link rel="icon" href="./assets/image/logo.png">
+    <link rel="shortcut icon" href="./assets/images/PNG/lazy-man-img.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -44,21 +45,21 @@
                 <div
                     class="d-flex gap-3 align-items-center justify-content-center mt-4 mt-lg-0 w-100 justify-content-lg-end">
                     <a href="https://discord.com/" target="_blank" class="icon-apps">
-                        <img src="./assets/images/SVG/discord.svg" alt="">
+                        <img src="./assets/images/SVG/discord.svg" alt="discord-logo">
                     </a>
                     <a href="https://x.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJteCI6IjIifQ%3D%3D%22%7D"
                         target="_blank" class="icon-apps">
-                        <img src="./assets/images/SVG/twitter.svg" alt="">
+                        <img src="./assets/images/SVG/twitter.svg" alt="twitter-logo">
                     </a>
                     <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank" class="icon-apps">
-                        <img src="./assets/images/SVG/insta.svg" alt="">
+                        <img src="./assets/images/SVG/insta.svg" alt="insta-logo">
                     </a>
                     <a href="https://www.myntra.com/" target="_blank" class="icon-apps">
-                        <img src="./assets/images/SVG/marvel.svg" alt="">
+                        <img src="./assets/images/SVG/marvel.svg" alt="marvel-logo">
                     </a>
                     <a href="https://www.boat-lifestyle.com/collections/?utm_source=Google&utm_medium=Search&utm_campaign=SB_Search_Brand_India_Sep2020&gad_source=1&gclid=CjwKCAjwvvmzBhA2EiwAtHVrbx-1hdGNn_GeXDpa_bw5D8g5o7vJtJCeDYkyXt7DxMuPl7lHdzDGXRoCISkQAvD_BwE"
                         target="_blank" class="icon-apps">
-                        <img src="./assets/images/SVG/boat.svg" alt="">
+                        <img src="./assets/images/SVG/boat.svg" alt="boat-logo">
                     </a>
                     <button class="walletbox d-none d-lg-block">Connect Wallet</button>
                 </div>
@@ -74,9 +75,9 @@
                 <span class="line line-2"></span>
                 <span class="line line-3"></span>
             </div>
-            <nav class="d-flex justify-content-center align-items-center menulist">
-                <ul class="d-flex justify-content-center align-items-center m-0 p-0">
-                    <li class="p-10 px-5 outline-black1"><a href="" class="navbar-iteams">About us</a></li>
+            <nav class="d-flex justify-content-center  align-items-center menulist">
+                <ul class="d-flex justify-content-center  align-items-center m-0 p-0">
+                    <li class="p-10 px-5 outline-black1 "><a href="" class="navbar-iteams ">About us</a></li>
                     <li class="p-10 px-5"><a href="" class="navbar-iteams">Minting</a></li>
                     <li class="p-10 px-5 outline-black1"><a href="" class="navbar-iteams">Roadmap</a></li>
                     <li class="p-10 px-5"><a href="" class="navbar-iteams">Team</a></li>
@@ -93,12 +94,12 @@
             <h1 class="sect-3-head fs-101 lh-140">THE HUSTLIN’ HARDOS.</h1>
         </div>
         <div class="boderrr">
-            <img src="./assets/images/sect-2nd-bg.png" alt="" class="w-100">
+            <img src="./assets/images/PNG/sect-2nd-bg.png" alt="bg-2nd-img" class="w-100">
         </div>
     </section>
 
     <!-- section-4 -->
-    <section class="py-5 d-non">
+    <section class="py-5 ">
         <div class="container my-5">
             <h1 class="m-0 news text-center fs-32 lh-85 p-0">“BREAKING NEWS: Hustlin Hardos set to launch the most
                 anticipated NFT
@@ -107,7 +108,7 @@
     </section>
 
     <!-- section-5 -->
-    <section class="outline-black d-non">
+    <section class="outline-black ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 outline-black">
@@ -133,14 +134,14 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12 p-0 outline-black">
-                    <img src="./assets/images/lazy-man-img.png" alt="img1" class="w-100">
+                    <img src="./assets/images/PNG/lazy-man-img.png" alt="img1" class="w-100">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- section-6 -->
-    <section class="py-5 bordr br-top d-non">
+    <section class="py-5 bordr br-top ">
         <div class="container">
             <div class="d-flex flex-clmn align-items-center justify-content-between">
                 <h2 class="latest fs-61">Latest Tweets</h2>
@@ -161,7 +162,7 @@
     </section>
 
     <!-- section-7 -->
-    <section class="d-non">
+    <section class="">
         <div class="container p-0">
             <div class="parentslider d-flex align-items-center justify-content-center">
                 <div class="childslider d-flex justify-content-center flex-column border-left border-right  w-100">
@@ -180,7 +181,7 @@
                     <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
                         in.
                     </p>
-                    <a href="" class="read">Read More...</a>
+                    <a href="" class="read text-decoration-underline">Read More...</a>
                 </div>
                 <div class="childslider d-flex justify-content-center flex-column border-left border-right  w-100">
                     <h2 class="etam">Venenatis.</h2>
@@ -198,7 +199,7 @@
                     <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
                         in.
                     </p>
-                    <a href="" class="read">Read More...</a>
+                    <a href="" class="read text-decoration-underline">Read More...</a>
                 </div>
                 <div class="childslider d-flex justify-content-center flex-column border-left border-right w-100">
                     <h2 class="etam2 fs-28">Quis vulputate.</h2>
@@ -216,7 +217,7 @@
                     <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
                         in.
                     </p>
-                    <a href="" class="read">Read More...</a>
+                    <a href="" class="read text-decoration-underline">Read More...</a>
                 </div>
                 <div class="childslider d-flex justify-content-center flex-column border-left border-right  w-100">
                     <h2 class="etam">Etiam eget</h2>
@@ -234,20 +235,20 @@
                     <p class="diam mt-2">Diam tellus arcu, amet ornare nulla ut scelerisque et. Cum porta ultrices quam
                         in.
                     </p>
-                    <a href="" class="read">Read More...</a>
+                    <a href="" class="read text-decoration-underline">Read More...</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- section-8 -->
-    <section class="outline-black d-non">
+    <section class="outline-black">
         <div class="container pt-5 pb-5">
             <h3 class="minting">Minting</h3>
         </div>
     </section>
     <!-- section-9 countdown -->
-    <section class="d-non">
+    <section class="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 border-left border-right2  d-flex flex-column justify-content-center">
@@ -277,16 +278,16 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12 p-0 img-border2 border-top2">
-                    <img src="./assets/images/lazy-man-img.png" alt="img220" class="w-100 ">
+                    <img src="./assets/images/PNG/lazy-man-img.png" alt="img-220" class="w-100 ">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- section-10 -->
-    <section class="border-top d-non">
+    <section class="border-top">
         <div class="container">
-            <div class="d-flex justify-content-md-center justify-content-between overflow-x-auto py-3">
+            <div class="d-flex justify-content-md-center justify-content-between overflow-x-auto py-21">
                 <div class="text-box6">
                     <p class="sec-6-font1">Etiam eget</p>
                     <p class="m-0 sec-6-font2">42</p>
@@ -313,7 +314,7 @@
     </section>
 
     <!-- section-11 (timeline) -->
-    <section class="border-bottom d-non">
+    <section class="border-bottom">
         <div class="container border-left border-right">
             <div class="timeline">
                 <div class="timeline-box-right">
@@ -335,7 +336,7 @@
                 </div>
                 <div class="timeline-box-left">
                     <div class="timeline-box-left-content">
-                        <h2 class="timeline-heading">Phase-1</h2>
+                        <h2 class="timeline-heading">Phase-2</h2>
                         <h2 class="timeline-heading2">minting event</h2>
                         <p class="timeline-para">
                             Hustlin’ Hardos can be minted and are revealed to the world. There will only ever be 9,999
@@ -348,7 +349,7 @@
                 </div>
                 <div class="timeline-box-right">
                     <div class="timeline-box-right-content">
-                        <h2 class="timeline-heading">Phase-1</h2>
+                        <h2 class="timeline-heading">Phase-3</h2>
                         <h2 class="timeline-heading2">Real-life Raffles</h2>
                         <p class="timeline-para">
                             We will be raffling real-life versions of some of the luxury items worn by Hustlin’ Hardos.
@@ -364,7 +365,7 @@
                 </div>
                 <div class="timeline-box-left">
                     <div class="timeline-box-left-content">
-                        <h2 class="timeline-heading">Phase-1</h2>
+                        <h2 class="timeline-heading">Phase-4</h2>
                         <h2 class="timeline-heading2">no-loss gambling</h2>
                         <p class="timeline-para">
                             Each week, we will organize free to enter no-loss gambling, with 25% of royalties being
@@ -379,7 +380,7 @@
                 </div>
                 <div class="timeline-box-right">
                     <div class="timeline-box-right-content">
-                        <h2 class="timeline-heading">Phase-1</h2>
+                        <h2 class="timeline-heading">Phase-5</h2>
                         <h2 class="timeline-heading2">Hustlin’ Hardettes</h2>
                         <p class="timeline-para">
                             The ethos of Hustlin’ Hardos is to create an authentic and inclusive community where we
@@ -396,7 +397,7 @@
                 </div>
                 <div class="timeline-box-left">
                     <div class="timeline-box-left-content">
-                        <h2 class="timeline-heading">Phase-1</h2>
+                        <h2 class="timeline-heading">Phase-6</h2>
                         <h2 class="timeline-heading2">metaverse integrations</h2>
                         <p class="timeline-para">
                             Both our personal and professional lives are increasingly moving online. Your Huslin’ Hardo
@@ -407,7 +408,7 @@
                 </div>
                 <div class="timeline-box-right">
                     <div class="timeline-box-right-content">
-                        <h2 class="timeline-heading">Phase-1</h2>
+                        <h2 class="timeline-heading">Phase-7</h2>
                         <h2 class="timeline-heading2">future developments</h2>
                         <p class="timeline-para">
                             It wouldn’t make sense to build one of the best online communities and not actively listen
@@ -420,7 +421,7 @@
                 </div>
                 <div class="timeline-box-left">
                     <div class="timeline-box-left-content">
-                        <h2 class="timeline-heading">Phase-1</h2>
+                        <h2 class="timeline-heading">Phase-8</h2>
                         <h2 class="timeline-heading2">swapping individual attributes</h2>
                         <p class="timeline-para">
                             Building a wardrobe app where you can secondary sales
@@ -428,16 +429,16 @@
                     </div>
                 </div>
                 <div class="arrow_timeline">
-                    <img src="./assets/images/down-arrow.png" alt="arrow-img" class="w-100">
+                    <img src="./assets/images/PNG/down-arrow.png" alt="arrow-img" class="w-100">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- section-12 -->
-    <section class="py-5 bordr2 br-top border-bottom d-non">
+    <section class="py-5 bordr2 br-top border-bottom">
         <div class="container">
-            <div class="d-flex flex-clmn align-items-center justify-content-between">
+            <div class="d-flex  align-items-center justify-content-between">
                 <h2 class="team fs-61">TEAM</h2>
                 <div class="d-flex align-items-center gap-5">
                     <div class="prev c-p">
@@ -457,13 +458,13 @@
 
 
     <!-- section-13 slider-2 -->
-    <section class="d-non">
+    <section class="">
         <div class="container">
             <div class="parentslider2">
                 <div class="childslider2 border-lrp  ">
                     <div class="d-flex align-items-center justify-content-center  flex-column">
                         <img src="./assets/images/SVG/lazy.svg" alt="" class="">
-                        <p class="m-0 diam-pera2 mt-2 fs-30">Executive Hardo</p>
+                        <p class="m-0 diam-pera2 mt-2 fs-30 ">Executive Hardo</p>
                         <p class="crypto mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
                             MBB
                             Consultant,</p>
@@ -494,12 +495,24 @@
 
                 </div>
 
+                <div class="childslider2 border-lrp  ">
+                    <div class="d-flex align-items-center justify-content-center  flex-column">
+                        <img src="./assets/images/SVG/lazy.svg" alt="" class="">
+                        <p class="m-0 diam-pera2 mt-2 fs-28">Johnny Banjo </p>
+                        <p class="crypto mt-3">Crypto startup executive, former VC Investor (US$ 1B+ AuM), former
+                            MBB
+                            Consultant,</p>
+
+                    </div>
+
+                </div>
+
             </div>
         </div>
     </section>
 
     <!-- section-14 -->
-    <section class="boderrr d-non">
+    <section class="boderrr">
         <div class="container">
             <h2 class="FAQs sm-py-40 py-20 m-0" id="FAQs">FAQs</h2>
         </div>
@@ -507,7 +520,7 @@
 
 
     <!-- section-15 accordian -->
-    <section class="d-non">
+    <section class="">
         <div class="border-top border-bottom">
             <div class="container border-left border-right pe-0 ps-0">
                 <div class="accordion">
