--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- section-3 -->
     <section class="">
         <div class="container">
-            <h1 class="sect-3-head fs-101 lh-140">THE HUSTLIN’ HARDOS.</h1>
+            <h1 class="sect-3-head fs-101 lh-140 mb-0">THE HUSTLIN’ HARDOS.</h1>
         </div>
         <div class="boderrr">
             <img src="./assets/images/PNG/sect-2nd-bg.png" alt="bg-2nd-img" class="w-100">
